--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         box-shadow: 1px 1px 5px 9px rgb(7, 63, 160) inset;
         width: 65%;
         
-        margin: auto;
+               
+        margin-left: 15%;
         padding: 15px;
         text-align: center;
         font-style: italic;
