--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         width: 65%;
         
                
-        margin-left: 15%;
+        margin: auto;
         padding: 15px;
         text-align: center;
         font-style: italic;
